SFDCProject/src/objects/Survey__c.object
<CustomObject>
    <description>Captures surveys info from clicktools or other survey tools</description>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <formula>Service_Contract__r.Agreement_Number__c</formula>
        <label>Agreement Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_1__c</fullName>
        <label>Answer 1</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_2__c</fullName>
        <label>Answer 2</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_3__c</fullName>
        <label>Answer 3</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSAT_Survey_Response__c</fullName>
        <label>CSAT Survey Response</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Address__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Contact Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FS_Customer_Comments__c</fullName>
        <label>FS Customer Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Dispatch_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Contains the id for the FS Dispatch</description>
        <label>FS Dispatch ID</label>
        <referenceTo>FS_Dispatch__c</referenceTo>
        <relationshipLabel>Surveys</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FS_NPS_Value__c</fullName>
        <description>Holds the value for the NPS question from the FS Survey</description>
        <label>FS NPS Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Partner_Comments__c</fullName>
        <description>Comments from Customer about Partner</description>
        <label>FS Partner Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Partner_Rating__c</fullName>
        <description>Value from Very Poor- Very Goo</description>
        <label>FS Partner Rating</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Work_Complete__c</fullName>
        <description>survey questions asking customer if work is completed. Yes/No response</description>
        <label>FS Work Complete</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gen_Asset_ID__c</fullName>
        <label>Gen Asset ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gen_Asset_Name__c</fullName>
        <label>Gen Asset Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Partner__c</fullName>
        <label>Install Partner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Org_Location__c</fullName>
        <label>Lead Org Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Value__c</fullName>
        <formula>IF ( ISBLANK ( CSAT_Survey_Response__c ), NULL , IF( CSAT_Survey_Response__c &gt; 8, 1, IF( CSAT_Survey_Response__c &lt; 7, -1, 0 ) ) )</formula>
        <label>NPS Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PTO_Month2__c</fullName>
        <label>PTO Month</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTO_Month_as_Date__c</fullName>
        <formula>datevalue(  PTO_month_reformat__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Turns the text value for PTO month into a date so it can be used for proper sorting</inlineHelpText>
        <label>PTO Month as Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTO__c</fullName>
        <label>PTO</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PTO_month_reformat__c</fullName>
        <formula>right( PTO_Month2__c ,4)&amp;&quot;-&quot;&amp;
LEFT(PTO_Month2__c,FIND(&quot;/&quot;,PTO_Month2__c,1)-1)&amp;&quot;-1&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PTO month reformat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <label>Question 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_2__c</fullName>
        <label>Question 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_3__c</fullName>
        <label>Question 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Sub_Type__c</fullName>
        <label>Survey Sub Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <label>Utility</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X12M_NPS_Count__c</fullName>
        <formula>Case(
X12M_NPS_Value__c ,
-1,1,
1,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>12M NPS Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X12M_NPS_Value__c</fullName>
        <formula>if(ISBLANK( X12M_Recommend_Sunrun__c ),X12M_Recommend_Sunrun__c,
Case( X12M_Recommend_Sunrun__c,
0,-1,
1,-1,
2,-1,
3,-1,
4,-1,
5,-1,
6,-1,
7,0,
8,0,
9,1,
10,1,
0))</formula>
        <label>12M NPS Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X12M_Recommend_Sunrun_Comments__c</fullName>
        <label>12M Recommend Sunrun Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X12M_Recommend_Sunrun__c</fullName>
        <label>12M Recommend Sunrun</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X12M_Sunrun_Satisfaction_Comments__c</fullName>
        <label>12M Sunrun Satisfaction Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X12M_Sunrun_Satisfaction__c</fullName>
        <label>12M Sunrun Satisfaction</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X12M_Sunrun_meet_expectation_Comment__c</fullName>
        <label>12M Sunrun meet expectation Comment</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X12M_Sunrun_meets_expectations__c</fullName>
        <label>12M Sunrun meets expectations</label>
        <picklist>
            <picklistValues>
                <fullName>Sunrun falls short of my expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunrun meets my expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunrun exceeds my expectations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X12M_What_Sunrun_can_do_to_move_10__c</fullName>
        <label>12M What Sunrun can do to move 10?</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X12M_What_Sunrun_can_do_to_stay_10__c</fullName>
        <label>12M What Sunrun can do to stay 10</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X18M_NPS_Count__c</fullName>
        <formula>Case(
X18M_NPS_Value__c ,
-1,1,
1,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18M NPS Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X18M_NPS_Value__c</fullName>
        <formula>if(ISBLANK( X18M_Recommend_Sunrun__c ),X18M_Recommend_Sunrun__c ,
Case(X18M_Recommend_Sunrun__c ,
0,-1,
1,-1,
2,-1,
3,-1,
4,-1,
5,-1,
6,-1,
7,0,
8,0,
9,1,
10,1,
0))</formula>
        <label>18M NPS Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X18M_Recommend_Sunrun_Comments__c</fullName>
        <label>18M Recommend Sunrun Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X18M_Recommend_Sunrun__c</fullName>
        <label>18M Recommend Sunrun</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X18M_Sunrun_Satisfaction_Comments__c</fullName>
        <label>18M Sunrun Satisfaction Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X18M_Sunrun_Satisfaction__c</fullName>
        <label>18M Sunrun Satisfaction</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X18M_Sunrun_meet_expectation_Comment__c</fullName>
        <label>18M Sunrun meet expectation Comment</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X18M_Sunrun_meets_expectations__c</fullName>
        <label>18M Sunrun meets expectations</label>
        <picklist>
            <picklistValues>
                <fullName>Sunrun falls short of my expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunrun meets my expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunrun exceeds my expectations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X18M_What_Sunrun_can_do_to_move_10__c</fullName>
        <label>18M What Sunrun can do to move 10?</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X18M_What_Sunrun_can_do_to_stay_10__c</fullName>
        <label>18M What Sunrun can do to stay 10</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1M_How_can_Sunrun_improve_experience__c</fullName>
        <label>1M How can Sunrun improve experience</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1M_Installer_Satisfaction_Comments__c</fullName>
        <label>1M - Installer Satisfaction Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1M_Installer_Satisfaction__c</fullName>
        <label>1M - Installer Satisfaction</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1M_NPS_Value__c</fullName>
        <formula>if(ISBLANK(X1M_Recommend_SunRun__c),X1M_Recommend_SunRun__c,
Case( X1M_Recommend_SunRun__c,
0,-1,
1,-1,
2,-1,
3,-1,
4,-1,
5,-1,
6,-1,
7,0,
8,0,
9,1,
10,1,
0))</formula>
        <label>1M NPS Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1M_NPS_count__c</fullName>
        <formula>Case(
X1M_NPS_Value__c ,
-1,1,
1,1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1M NPS count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1M_Recommend_SunRun_Comments__c</fullName>
        <label>1M - Recommend SunRun Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1M_Recommend_SunRun__c</fullName>
        <label>1M - Recommend SunRun</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1M_SunRun_Satisfaction_Comments__c</fullName>
        <label>1M - SunRun Satisfaction Comments</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1M_SunRun_Satisfaction__c</fullName>
        <label>1M - SunRun Satisfaction</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1M_What_SunRun_can_do_to_move_to_10__c</fullName>
        <label>1M - What SunRun can do to move to 10?</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1M_What_SunRun_can_do_to_stay_at_10__c</fullName>
        <label>1M - What SunRun can do to stay at 10?</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X24M_Sunrun_meet_expectation_Comment__c</fullName>
        <label>24M Sunrun meet expectation Comment</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X24M_Sunrun_meets_expectations__c</fullName>
        <label>24M Sunrun meets expectations</label>
        <picklist>
            <picklistValues>
                <fullName>Sunrun falls short of my expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunrun meets my expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunrun exceeds my expectations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X24M_What_Sunrun_can_do_to_move_10__c</fullName>
        <label>24M What Sunrun can do to move 10?</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X24M_What_Sunrun_can_do_to_stay_10__c</fullName>
        <label>24M What Sunrun can do to stay 10</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X6M_What_can_Sunrun_do_to_move_to_10__c</fullName>
        <label>6M What can Sunrun do to move to 10?</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X6M_What_can_Sunrun_do_to_stay_at_10__c</fullName>
        <label>6M What can Sunrun do to stay at 10?</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Survey {00000000}</displayFormat>
        <label>Survey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <recordTypes>
        <fullName>Field_Service</fullName>
        <active>true</active>
        <description>Houses data from the Field Service Survey</description>
        <label>Field Service</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>